--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <h1>Welcome friends.</h1>
     <p>This is a simple website created as part of a web development course.</p>
 </header>
+<div class="container">
+<div class="box">box1</div>
+<div class="box">box2</div>
+<div class="box">box3</div>
+</div>
+
 </body>
 </html>
