--- a/index.html
+++ b/index.html
@@ -18,11 +18,48 @@
 <a href="#">Bilder</a> 
 </nav>
 
+
 <div class="container">
 <div class="box">box1</div>
 <div class="box">box2</div>
 <div class="box">box3</div>
 </div>
+<h1>Photo Gallery</h1>
+<nav class="photomenu"> 
+    
+<div class="photogallery">
+    
+  <div class="gallery-item">
+        <img src="https://static.wikia.nocookie.net/houkai-star-rail/images/5/53/Sticker_PPG_20_Chimera_02.png/revision/latest/scale-to-width-down/60?cb=20250226165702" alt="Sleepy">
+        <p>Monday.</p>
+    </div>
+
+    <div class="gallery-item">
+        <img src="https://static.wikia.nocookie.net/houkai-star-rail/images/b/b9/Sticker_PPG_20_Chimera_01.png/revision/latest/scale-to-width-down/60?cb=20250226165654" alt="Happy">
+        <p>Tuesday.</p>
+    </div>
+
+    <div class="gallery-item">
+        <img src="https://static.wikia.nocookie.net/houkai-star-rail/images/6/6b/Sticker_PPG_21_Chimera_02.png/revision/latest/scale-to-width-down/60?cb=20250226210209" alt="Confused">
+        <p>Wednesday.</p>
+    </div>
+
+    <div class="gallery-item">
+        <img src="https://static.wikia.nocookie.net/houkai-star-rail/images/4/48/Sticker_PPG_21_Chimera_01.png/revision/latest/scale-to-width-down/60?cb=20250226210209" alt="Curious">
+        <p>Thursday.</p>
+    </div>
+    <div class="gallery-item">
+        <img src="https://static.wikia.nocookie.net/houkai-star-rail/images/2/29/Sticker_PPG_17_Flying_Aureus_01.png/revision/latest/scale-to-width-down/60?cb=20241023135627"alt="Impatient">
+        <p>Friday.</p>
+    </div>
+</div>
+
+
+
+
+
+</nav>
+
 
 
 
